# corallab-policies

./: README.org  pixi.toml  pyproject.toml
corallab_policies/: backend_manager.py  policy.py
corallab_policies/backends/: __init__.py
corallab_policies/backends/openai_baselines/: __init__.py  policy_impl.py
corallab_policies/backends/robomimic/: __init__.py  policy_impl.py
examples/openai_baselines/: test.py
examples/robomimic/: test.py
examples/torchrl/: test.py
