[tool.poetry]
name = "corallab-policies"
version = "0.1.0"
description = ""
authors = ["Tassos Manganaris <tassos.manganaris@gmail.com>"]
readme = "README.org"
packages = [{include = "corallab_policies"}]

[tool.poetry.dependencies]
python = ">=3.9,<4"
corallab-lib = "0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
